syntax = "proto3";

import "common/commonCommandResponse.proto";
package poleSample.apis.product;


// The greeting service definition.
service ProductType {
  // Sends a greeting
  rpc Add(AddProductTypeRequest) returns (pole.Grpc.ExtraType.CommonCommandResponse);
}

// The request message containing the user's name.
message AddProductTypeRequest {
  string id = 1;
  string name = 2;
}
